--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web application that allows users to create a new account.",
   "main": "index.js",
   "scripts": {
-    "dev" : "nodemon ./server",
+    "dev": "cross-env NODE_ENV=development nodemon ./server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +22,7 @@
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
